- Fixed Liked Songs context - Fixed Daily Drive context - Fixed swapped top content alignment

--- a/src/main/resources/static/design/style.css
+++ b/src/main/resources/static/design/style.css
@@ -431,8 +431,8 @@ div#context-main {
     display: none;
 }
 
-#content-top.swap #context-extra {
-    align-self: end;
+#content-top.swap #context {
+    align-items: end;
 }
 
 #meta-right {
